--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -57,21 +57,42 @@ jobs:
           echo "<html>
           <head>
             <title>Lighthouse Audit Summary</title>
-            <style>
-              body { font-family: Arial, sans-serif; line-height: 1.6; }
-              h1, h2 { color: #333; }
-              table { width: 100%; border-collapse: collapse; margin: 20px 0; }
-              table, th, td { border: 1px solid #ddd; }
-              th, td { padding: 10px; text-align: left; cursor: pointer; }
-              th { background-color: #f4f4f4; }
-              tr:nth-child(even) { background-color: #f9f9f9; }
-            </style>
+            <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css\" rel=\"stylesheet\">
             <script>
+              const rowsPerPage = 5; // Number of rows per page
+              let currentPage = 1;
+
+              function paginateTable() {
+                const table = document.getElementById('auditTable');
+                const rows = Array.from(table.querySelectorAll('tbody tr'));
+                const totalRows = rows.length;
+                const totalPages = Math.ceil(totalRows / rowsPerPage);
+
+                // Hide all rows
+                rows.forEach((row, index) => {
+                  row.style.display = index >= (currentPage - 1) * rowsPerPage && index < currentPage * rowsPerPage ? '' : 'none';
+                });
+
+                // Update pagination controls
+                const pagination = document.getElementById('pagination');
+                pagination.innerHTML = '';
+                for (let i = 1; i <= totalPages; i++) {
+                  pagination.innerHTML += \`<li class="page-item \${i === currentPage ? 'active' : ''}">
+                    <a class="page-link" href="#" onclick="goToPage(\${i}); return false;">\${i}</a>
+                  </li>\`;
+                }
+              }
+
+              function goToPage(page) {
+                currentPage = page;
+                paginateTable();
+              }
+
               function sortTable(columnIndex) {
                 const table = document.getElementById('auditTable');
-                const rows = Array.from(table.rows).slice(1);
+                const rows = Array.from(table.querySelectorAll('tbody tr'));
                 const isAscending = table.dataset.sortOrder === 'asc';
-                
+
                 rows.sort((a, b) => {
                   const cellA = a.cells[columnIndex].innerText;
                   const cellB = b.cells[columnIndex].innerText;
@@ -81,25 +102,47 @@ jobs:
                 });
 
                 table.dataset.sortOrder = isAscending ? 'desc' : 'asc';
-                rows.forEach(row => table.appendChild(row));
+                rows.forEach(row => table.querySelector('tbody').appendChild(row));
+                
+                // Update arrows
+                document.querySelectorAll('th i').forEach(icon => icon.classList.remove('bi-caret-up-fill', 'bi-caret-down-fill'));
+                const arrow = isAscending ? 'bi-caret-up-fill' : 'bi-caret-down-fill';
+                document.querySelector(`th[data-column="\${columnIndex}"] i`).classList.add(arrow);
+
+                // Reapply pagination after sorting
+                paginateTable();
               }
+
+              document.addEventListener('DOMContentLoaded', () => paginateTable());
             </script>
+            <style>
+              th { cursor: pointer; }
+              th:not([data-sortable="false"]):hover { background-color: #f8f9fa; }
+              tr:hover { background-color: #f1f1f1; }
+              .pagination { justify-content: center; }
+            </style>
           </head>
-          <body>
-          <h1>Lighthouse Audit Summary</h1>
-          <p>This page lists the Lighthouse audit results for various pages. Click on the column headers to sort.</p>
-          <table id=\"auditTable\" data-sort-order=\"asc\">
-            <thead>
-              <tr>
-                <th onclick=\"sortTable(0)\">URL</th>
-                <th onclick=\"sortTable(1)\">Performance</th>
-                <th onclick=\"sortTable(2)\">Accessibility</th>
-                <th onclick=\"sortTable(3)\">Best Practices</th>
-                <th onclick=\"sortTable(4)\">SEO</th>
-                <th>Report</th>
-              </tr>
-            </thead>
-            <tbody>
+          <body class=\"bg-light\">
+            <nav class=\"navbar navbar-expand-lg navbar-light bg-light shadow-sm\">
+              <div class=\"container-fluid\">
+                <a class=\"navbar-brand\" href=\"#\">Lighthouse Audit</a>
+              </div>
+            </nav>
+            <div class=\"container mt-4\">
+              <h1 class=\"text-center\">Lighthouse Audit Summary</h1>
+              <p class=\"text-center\">Click on column headers to sort. Navigate through pages using the pagination controls below.</p>
+              <table class=\"table table-hover\" id=\"auditTable\" data-sort-order=\"asc\">
+                <thead class=\"table-light\">
+                  <tr>
+                    <th onclick=\"sortTable(0)\" data-column=\"0\">URL <i class=\"bi\"></i></th>
+                    <th onclick=\"sortTable(1)\" data-column=\"1\">Performance <i class=\"bi\"></i></th>
+                    <th onclick=\"sortTable(2)\" data-column=\"2\">Accessibility <i class=\"bi\"></i></th>
+                    <th onclick=\"sortTable(3)\" data-column=\"3\">Best Practices <i class=\"bi\"></i></th>
+                    <th onclick=\"sortTable(4)\" data-column=\"4\">SEO <i class=\"bi\"></i></th>
+                    <th data-sortable=\"false\">Report</th>
+                  </tr>
+                </thead>
+                <tbody>
           " > $SUMMARY_FILE
 
           # Read and parse the JSON file, sorting URLs alphabetically
@@ -107,17 +150,23 @@ jobs:
             reportFile=$(basename "$localReport")
 
             echo "<tr>
-              <td><a href=\"$reportFile\">$url</a></td>
+              <td><a href=\"$reportFile\" class=\"text-decoration-none\">$url</a></td>
               <td>$performance</td>
               <td>$accessibility</td>
               <td>$bestPractices</td>
               <td>$seo</td>
-              <td><a href=\"$reportFile\">View Report</a></td>
+              <td><a href=\"$reportFile\" class=\"btn btn-sm btn-primary\">View Report</a></td>
             </tr>" >> $SUMMARY_FILE
           done
 
           echo "</tbody>
-          </table>
+              </table>
+              <nav aria-label=\"Page navigation\">
+                <ul class=\"pagination\" id=\"pagination\"></ul>
+              </nav>
+            </div>
+            <script src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js\"></script>
+            <script src=\"https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js\"></script>
           </body>
           </html>" >> $SUMMARY_FILE
 
