--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -130,10 +130,11 @@ jobs:
               .numeric { text-align: center; }
             </style>
           </head>
-          <body class=\"bg-light\">
+          <body>
             <div class=\"container mt-4\">
-              <h1 class=\"text-center\">Lighthouse Audit Summary</h1>
+              <h1 class=\"text-center\">Marketplace Website Audit Summary</h1>
               <p class=\"text-center\">Click on column headers to sort. Navigate through pages using the pagination controls below.</p>
+              <hr/>
               <table class=\"table table-hover border rounded\" id=\"auditTable\" data-sort-order=\"asc\">
                 <thead class=\"table-light\">
                   <tr>
