--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -2,183 +2,42 @@ name: Lighthouse Reuse CI
 
 on:
   workflow_dispatch:
+
 env:
-  urls: ""
+  API_URL: "https://market.axonivy.com/marketplace-service/api/product?type=all&language=en&isRESTClient=false"
+  BASE_URL: "https://market.axonivy.com"
+  BATCH_SIZE: 10
+
 jobs:
-  lighthouse:
+  fetch-urls:
     runs-on: ubuntu-latest
+    outputs:
+      urls_batches: ${{ steps.set-env.outputs.urls_batches }}
     steps:
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install Chrome
+      - name: Fetch Product IDs in Batches
+        id: set-env
         run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+          RESPONSE=$(curl -s "$API_URL&size=1000")
+          TOTAL_PRODUCTS=$(echo "$RESPONSE" | jq -r '.page.totalElements')
 
-      - name: Install Lighthouse
-        run: |
-          npm install -g lighthouse
+          echo "Total Products: $TOTAL_PRODUCTS"
 
-      - name: Fetch Product Data and Generate URLs
-        run: |
-          API_URL="https://market.axonivy.com/marketplace-service/api/product?type=all&language=en&size=1000&isRESTClient=false"
-          BASE_URL="https://market.axonivy.com"
-
-          # Fetch API response
-          RESPONSE=$(curl -s "$API_URL")
-
-          # Generate the list of URLs and save them to a file
-          echo "$BASE_URL" > urls.txt
-          echo "$RESPONSE" | jq -r '.["_embedded"]["products"][]["id"]' | while read id; do
-            echo "$BASE_URL/$id" >> urls.txt
+          URL_BATCHES=""
+          for ((i=0; i<TOTAL_PRODUCTS; i+=$BATCH_SIZE)); do
+            RESPONSE=$(curl -s "$API_URL&size=$BATCH_SIZE&page=$((i/$BATCH_SIZE))")
+            BATCH_URLS=$(echo "$RESPONSE" | jq -r '.[_embedded].products[] | env.BASE_URL + "/" + .id' | paste -sd",")
+            URL_BATCHES="${URL_BATCHES}${BATCH_URLS} "
           done
 
-          # Join all lines in urls.txt into a single string, with each URL on a new line
-          URLs=$(cat urls.txt | tr '\n' ',')
-          URLs="${URLs%,}"
-          # Save the URLs to the environment variable for later use
-          echo "urls=$URLs" >> $GITHUB_ENV
-      - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
-      - name: Lighthouse
-        uses: foo-software/lighthouse-check-action@master
-        with:
-          outputDirectory: ${{ github.workspace }}/tmp/artifacts
-          urls: ${{ env.urls }}
+          echo "urls_batches=$URL_BATCHES" >> $GITHUB_ENV
+          echo "::set-output name=urls_batches::$URL_BATCHES"
 
-      - name: Generate HTML Summary
-        run: |
-          # Path to the result.json file from the Lighthouse report
-          RESULTS_FILE="${{ github.workspace }}/tmp/artifacts/results.json"
-          
-          # Create an empty HTML summary file
-          SUMMARY_FILE="${{ github.workspace }}/tmp/artifacts/lighthouse-summary.html"
-          echo "<html>
-          <head>
-            <title>Lighthouse Audit Summary</title>
-            <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css\" rel=\"stylesheet\">
-            <script>
-              const rowsPerPage = 10;
-              let currentPage = 1;
-
-              function paginateTable() {
-                const table = document.getElementById('auditTable');
-                const rows = Array.from(table.querySelectorAll('tbody tr'));
-                const totalRows = rows.length;
-                const totalPages = Math.ceil(totalRows / rowsPerPage);
-
-                // Hide all rows
-                rows.forEach((row, index) => {
-                  row.style.display = index >= (currentPage - 1) * rowsPerPage && index < currentPage * rowsPerPage ? '' : 'none';
-                });
-
-                // Update pagination controls
-                const pagination = document.getElementById('pagination');
-                pagination.innerHTML = '';
-                if (totalPages > 1) {
-                  for (let i = 1; i <= totalPages; i++) {
-                    const isActive = i === currentPage ? 'active' : '';
-                    pagination.innerHTML += '<li class=\"page-item ' + isActive + '\">' +
-                      '<a class=\"page-link\" href=\"#\" onclick=\"goToPage(' + i + '); return false;\">' + i + '</a>' +
-                      '</li>';
-                  }
-                } else {
-                  pagination.style.display = 'none';
-                }
-              }
-
-              function goToPage(page) {
-                currentPage = page;
-                paginateTable();
-              }
-
-              function sortTable(columnIndex) {
-                const table = document.getElementById('auditTable');
-                const rows = Array.from(table.querySelectorAll('tbody tr'));
-                const isAscending = table.dataset.sortOrder === 'asc';
-
-                rows.sort((a, b) => {
-                  const cellA = a.cells[columnIndex].innerText;
-                  const cellB = b.cells[columnIndex].innerText;
-                  return isAscending
-                    ? cellA.localeCompare(cellB, undefined, { numeric: true })
-                    : cellB.localeCompare(cellA, undefined, { numeric: true });
-                });
-
-                table.dataset.sortOrder = isAscending ? 'desc' : 'asc';
-                rows.forEach(row => table.querySelector('tbody').appendChild(row));
-                
-                // Update arrows
-                document.querySelectorAll('th i').forEach(icon => icon.classList.remove('bi-caret-up-fill', 'bi-caret-down-fill'));
-                const arrow = isAscending ? 'bi-caret-up-fill' : 'bi-caret-down-fill';
-                document.querySelector('th[data-column=\"' + columnIndex + '\"] i').classList.add(arrow);
-
-                // Reapply pagination after sorting
-                paginateTable();
-              }
-
-              document.addEventListener('DOMContentLoaded', () => paginateTable());
-            </script>
-            <style>
-              th { cursor: pointer; text-align: center; vertical-align: middle; }
-              th:not([data-sortable=\"false\"]):hover { background-color: #f8f9fa; }
-              tr:hover { background-color: #f1f1f1; }
-              td, th { vertical-align: middle; }
-              .pagination { justify-content: center; margin-top: 1rem; }
-              .table-hover tbody tr:hover td { background-color: #e9ecef; }
-              .numeric { text-align: center; }
-            </style>
-          </head>
-          <body>
-            <div class=\"container mt-4\">
-              <h1 class=\"text-center\">Marketplace Website Audit Summary</h1>
-              <p class=\"text-center\">Click on column headers to sort. Navigate through pages using the pagination controls below.</p>
-              <br/>
-              <table class=\"table table-hover border rounded\" id=\"auditTable\" data-sort-order=\"asc\">
-                <thead class=\"table-light\">
-                  <tr>
-                    <th onclick=\"sortTable(0)\" data-column=\"0\">URL <i class=\"bi\"></i></th>
-                    <th onclick=\"sortTable(1)\" data-column=\"1\" class=\"numeric\">Performance <i class=\"bi\"></i></th>
-                    <th onclick=\"sortTable(2)\" data-column=\"2\" class=\"numeric\">Accessibility <i class=\"bi\"></i></th>
-                    <th onclick=\"sortTable(3)\" data-column=\"3\" class=\"numeric\">Best Practices <i class=\"bi\"></i></th>
-                    <th onclick=\"sortTable(4)\" data-column=\"4\" class=\"numeric\">SEO <i class=\"bi\"></i></th>
-                    <th data-sortable=\"false\">Report</th>
-                  </tr>
-                </thead>
-                <tbody>
-          " > $SUMMARY_FILE
-
-          # Read and parse the JSON file, sorting URLs alphabetically
-          jq -r '.[] | "\(.url),\(.scores.performance),\(.scores.accessibility),\(.scores.bestPractices),\(.scores.seo),\(.localReport)"' $RESULTS_FILE | sort -t, -k1,1 | while IFS=, read -r url performance accessibility bestPractices seo localReport; do
-            reportFile=$(basename "$localReport")
-
-            echo "<tr>
-              <td><a href=\"$url\" class=\"text-decoration-none\">$url</a></td>
-              <td class=\"numeric\">$performance</td>
-              <td class=\"numeric\">$accessibility</td>
-              <td class=\"numeric\">$bestPractices</td>
-              <td class=\"numeric\">$seo</td>
-              <td class=\"numeric\"><a href=\"$reportFile\">View Report</a></td>
-            </tr>" >> $SUMMARY_FILE
-          done
-
-          echo "</tbody>
-              </table>
-              <nav aria-label=\"Page navigation\">
-                <ul class=\"pagination\" id=\"pagination\"></ul>
-              </nav>
-            </div>
-            <script src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js\"></script>
-            <script src=\"https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js\"></script>
-          </body>
-          </html>" >> $SUMMARY_FILE
-
-          echo "Summary HTML generated at $SUMMARY_FILE"
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: Lighthouse reports
-          path: ${{ github.workspace }}/tmp/artifacts
-
+  lighthouse:
+    needs: fetch-urls
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        batch: ${{ fromJson(needs.fetch-urls.outputs.urls_batches) }}
+    steps:
+      - run: |
+          echo "Batch URLs: ${{ matrix.batch }}"
