--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -12,10 +12,10 @@ jobs:
   fetch-urls:
     runs-on: ubuntu-latest
     outputs:
-      urls_batches: ${{ steps.set-env.outputs.urls_batches }}
+      urls_batches: ${{ steps.fetch-url-batches.outputs.urls_batches }}
     steps:
       - name: Fetch Product IDs in Batches
-        id: set-env
+        id: fetch-url-batches
         run: |
           RESPONSE=$(curl -s "$API_URL&size=1000")
           TOTAL_PRODUCTS=$(echo "$RESPONSE" | jq -r '.page.totalElements')
@@ -34,8 +34,7 @@ jobs:
           # Remove trailing comma
           URL_BATCHES=${URL_BATCHES%,}
 
-          echo "urls_batches=$URL_BATCHES" >> $GITHUB_ENV
-          echo "::set-output name=urls_batches::$URL_BATCHES"
+          echo "urls_batches=$URL_BATCHES" >> $GITHUB_OUTPUT
 
   lighthouse:
     needs: fetch-urls
