--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Process URL Batches
         id: process-urls
         run: |
+          cat urls_batches.txt
           URLs=$(cat urls_batches.txt | jq -R -s -c 'split("\n") | map(select(. != ""))')
           echo "URLs: $URLs"
           echo "::set-output name=batches::$URLs"
