--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -33,7 +33,8 @@ jobs:
         id: process-urls
         run: |
           URLs=$(cat urls_batches.txt | jq -R -s -c 'split("\n") | map(select(. != ""))')
-          echo "urls_batches=${URLs}" >> $GITHUB_OUTPUT
+          echo "URLs: $URLs"
+          echo "urls_batches=$URLs" >> $GITHUB_OUTPUT
 
   lighthouse:
     needs: fetch-urls
