--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -22,6 +22,7 @@ jobs:
 
           while true; do
             RESPONSE=$(curl -s "$API_URL&size=$BATCH_SIZE&page=$PAGE&sort=alphabetically")
+            echo "Response: $RESPONSE"
             PRODUCTS=$(echo "$RESPONSE" | jq -r '.["_embedded"]["products"][]["id"] // empty')
 
             if [ -z "$PRODUCTS" ]; then
