--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -29,10 +29,10 @@ jobs:
               break
             fi
             BATCH_URLS=$(echo "$PRODUCTS" | jq -R -s -c --arg base_url "$BASE_URL" 'split("\n") | map(select(. != "")) | map("\($base_url)/\(.)") | join(",")')
-            URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg batch "$BATCH_URLS" '. + [$batch | @csv]')
+            URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg batch "$BATCH_URLS" '. + [$batch]')
             PAGE=$((PAGE + 1))
           done
-          echo "URLS_BATCHES: $URLS_BATCHES"
+          echo "$URLS_BATCHES"
           echo "urls_batches=$URLS_BATCHES" >> "$GITHUB_OUTPUT"
 
       - name: Output URLs Batches
