--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -33,8 +33,13 @@ jobs:
             URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg batch "$BATCH_URLS" '. + [$batch]')
             PAGE=$((PAGE + 1))
           done
-          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq -r 'map(fromjson)')
-          echo "urls_batches=$URLS_BATCHES" >> "$GITHUB_OUTPUT"
+          # Convert the URLS_BATCHES array to a proper JSON array and remove escaped quotes
+          CLEAN_URLS_BATCHES=$(echo "$URLS_BATCHES" | jq -c 'map(fromjson)')
+
+          echo "$CLEAN_URLS_BATCHES"
+
+          # Save the cleaned URL batches to the GITHUB_OUTPUT
+          echo "urls_batches=$CLEAN_URLS_BATCHES" >> "$GITHUB_OUTPUT"
 
       - name: Output URLs Batches
         run: |
