--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -161,8 +161,7 @@ jobs:
           </head>
           <body>
             <div class=\"container mt-4\">
-              <h1 class=\"text-center\">Marketplace Website Audit Summary</h1>
-              <p class=\"text-center\">Click on column headers to sort. Navigate through pages using the pagination controls below.</p>
+              <h1 class=\"text-center\">Marketplace Website Audit Summary By Lighthouse</h1>
               <br/>
               <table class=\"table table-hover border rounded\" id=\"auditTable\" data-sort-order=\"asc\">
                 <thead class=\"table-light\">
