--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -18,7 +18,7 @@ jobs:
         id: collect-urls
         run: |
           PAGE=0
-          URLS_BATCHES="[]"
+          URLS_BATCHES="[$BASE_URL]"
 
           while true; do
             RESPONSE=$(curl -s "$API_URL&size=$BATCH_SIZE&page=$PAGE&sort=alphabetically")
